cmake_minimum_required(VERSION 3.17)
project(Langage_C C)

set(CMAKE_C_STANDARD 99)

add_executable(Langage_C src/main.c src/app/app4/ccacu040.c src/app/app4/ccacu040.h src/main.h src/app/app5/ccacu050.c src/app/app5/ccacu050.h src/app/app6/ccacu060.c src/app/app6/ccacu060.h src/ex/ex1/cstruc001.c src/ex/ex1/cstruc001.h src/ex/ex3/cstruc003.c src/ex/ex3/cstruc003.h src/app/app7/ccacu070.c src/app/app7/ccacu070.h src/proj/liste.h)
