bin_PROGRAMS = langage_c

langage_c_SOURCES = \
    src/main.c src/main.h \
    src/ex/ex3/cstruc003.c src/ex/ex3/cstruc003.h \
    src/app/app4/ccacu040.c src/app/app4/ccacu040.h \
    src/app/app5/ccacu050.c src/app/app5/ccacu050.h \
    src/app/app6/ccacu060.c src/app/app6/ccacu060.h \
    src/app/app7/ccacu070.c src/app/app7/ccacu070.h \
    src/proj/liste.c src/proj/liste.h

langage_c_CFLAGS =
langage_c_CFLAGS += -W
langage_c_CFLAGS += -Wall
langage_c_CFLAGS += -Wextra
#langage_c_CFLAGS += -Werror
langage_c_CFLAGS += -std=c99
langage_c_CFLAGS += -pipe

langage_c_LDADD =
